--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+    implementation 'org.web3j:crypto:4.3.1'
     implementation 'org.java-websocket:Java-WebSocket:1.4.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
